# parcel-react-hot-loader

./: .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  tsconfig.json
public/: index.html  manifest.json
src/: App.tsx  index.js
