load(
    "@build_bazel_rules_nodejs//:defs.bzl",
    "nodejs_binary",
)

filegroup(
    name = "react_sources",
    srcs = glob(
        [
            "src/**",
            "public/**",
            "package.json",
            "yarn.lock",
        ],
        exclude = [
            "**/test/**",
        ],
    ),
)

nodejs_binary(
    name = "parcel_files",
    args = [
        "build",
        "./public/index.html",
        # "--public-url",
        # "./",
    ],
    data = [
        ":react_sources",
        "@yarn_install//:node_modules",
    ],
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = "@yarn_install//:node_modules",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "parcel_server",
    args = [
        # "build",
        "./public/index.html",
        # "--public-url",
        # "./",
    ],
    data = [
        ":react_sources",
        # "@yarn_install//:node_modules",
    ],
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = "@yarn_install//:node_modules",
    visibility = ["//visibility:public"],
)
