load(
    "@build_bazel_rules_nodejs//:defs.bzl",
    "nodejs_binary",
)

filegroup(
    name = "react_sources",
    srcs = glob(
        [
            "src/**",
            "public/**",
            "package.json",
            "yarn.lock",
        ],
        exclude = [
            "**/test/**",
        ],
    ),
)

filegroup(
    name = "node_modules",
    srcs = glob(
        [
            "node_modules/**",
        ],
        exclude = [
            "node_modules/**/examples/**",
            # e.g. node_modules/@firebase/firestore/coverage/browser/HeadlessChrome 64.0.3282
            "node_modules/@firebase/**/**/browser/* */**",
            # e.g. node_modules/adm-zip/test/assets/attributes_test/New folder/hidden.txt
            "node_modules/**/test/**",
            # e.g. node_modules/xpath/docs/function resolvers.md
            "node_modules/**/docs/**",
            # e.g. node_modules/puppeteer/.local-chromium/mac-536395/chrome-mac/Chromium.app/Contents/Versions/66.0.3347.0/Chromium Framework.framework/Chromium Framework
            "node_modules/**/.*/**",
        ],
    ),
)

nodejs_binary(
    name = "parcel_files",
    args = [
        "build",
        "./public/index.html",
        # "--public-url",
        # "./",
    ],
    data = [
        ":react_sources",
    ],
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = ":node_modules",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "parcel_server",
    args = [
        "./public/index.html",
        # "--public-url",
        # "./",
    ],
    data = [
        ":react_sources",
    ],
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = ":node_modules",
    visibility = ["//visibility:public"],
)
